Add Node.js version and Render configuration

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "keywords": ["fitness", "planner", "daily"],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "sqlite3": "^5.1.6",
